# Rubik-Cube

./: CMakeLists.txt
rubiks-cube-solver-main/: CMakeLists.txt  main.cpp
